*Empty MediaWiki Message*

--- a/Кривошеева,_Ефимия_Петровна.mw
+++ b/Кривошеева,_Ефимия_Петровна.mw
@@ -25,11 +25,11 @@
 }}
 '''Кривошеева, Ефимия Петровна''' (1867 [[аштемковонь 1 чи]] [[Пензань ёнкс|Пензань ёнкссонь]] Тарасовка велесэ — [[1936]] [[аштемковонь 24 чи]]) — [[Эрзянь кель|эрзянь]] кельсэ содавикс сёрмадей, валморонь ладсий.
 
-Чачсь  [[1867]] [[аштемковонь 1 чи]] [[Пензань ёнкс|Пензань ёнкссонь]] Кемешкирской буень Тарасовка велесэ сокицянь-видицянь семиясо. Сонзэ ярямонзо вельде парсте неяви се, мезе макссь Советской властесь икеле лепштязь важодиця раськенть шкинеманзо панжовомантень. 
+Чачсь  [[1867]] [[аштемковонь 1 чи]] [[Пензань ёнкс|Пензань ёнкссонь]] Кемешкирской буень Тарасовка велесэ<ref name="МРОКМ им. И.Д. Воронина_Народная сказительница">[http://www.mrkm.ru/news/?id=362  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Народная сказительница] {{ref-ru}}</ref> сокицянь-видицянь семиясо. Сонзэ ярямонзо вельде парсте неяви се, мезе макссь Советской властесь икеле лепштязь важодиця раськенть шкинеманзо панжовомантень. 
 
 Е.П. Кривошеева, сёрмас а содыця авась, сюпалгавтызе эрзянь литературанть од моросо, ёвтнемасо, ёвкссо, конатнень лацесь эрямонзо перть. Сонзэ содыцянзо лецтнить, Ефимия Петровна содась пек ламо раськень морот, кезэрень  ёвкст, лайшемат, конатнень сон вечксь ды маштсь ёвтнемест ды морамост кунсолыцятненень. А сонзэ кунсолыцякс ды содыцякс кармась улеме весе минек масторонь ламо раськень раскеть.
 
-Ефимия Петровнань лемензэ минек масторонь ловныцятьне кармасть содамо [[1936]] иестэ, зярдо «Правда» кулялопасонть рузонь кельсэ ульнесь печатазь «Кировдо лайшемась». Те сёрмадовксось алтазель Коммунистической партиянть инее цёранстэнь Сергей Миронович Кировнень, конань Ленинградсо маштызь раськенть яттне. 
+Ефимия Петровнань лемензэ минек масторонь ловныцятьне кармасть содамо [[1936]] иестэ, зярдо «Правда» кулялопасонть рузонь кельсэ ульнесь печатазь «Кировдо лайшемась»<ref name="МРОКМ им. И.Д. Воронина_Народная сказительница"/>. Те сёрмадовксось алтазель Коммунистической партиянть инее цёранстэнь Сергей Миронович Кировнень, конань Ленинградсо маштызь раськенть яттне. 
 
 «Кировдо лайшемась» поэманть аванзо мальга сёрмадызе эрзянь содавикс валморозеесь Илька Морыця ([[Кривошеев, Илья Петрович|И.П. Кривошеев]]). Те поэмась ютавтозь ламо лия раськень кельс. Е.П. Кривошеева эсензэ мелеензэ-превензэ, седейшкавань ёжомарямонзо эрзянь раськенть эрямонзо коряс видестэ невтизе моросонзо, аварькшнемасонзо, лайшемасонзо, конатне лиссть «Лайшемат ды морот» ды «Авань в айгель» пурнавксснесэ. Куломадо мейле сказительницанть весе сёрмадовксонзо  нолдазельть башка кирь пусмозо «Е.П. Кривошеева». 
 
@@ -38,6 +38,10 @@
 
 Кулось Ефимия Петровна [[аштемковонь 24 чи]]стэ [[1936]] иесте.
   
+
+== Лисьм.: ==
+<references />
+
 [[Category:Эрзянь сёрмадейть|К]]
 [[Category:Эрзянь валморонь ладсийть|К]]
 [[Category:Эрзянь Ине ломанть|К]]
