--- a/Курилова_(Рамаданбуе).mw
+++ b/Курилова_(Рамаданбуе).mw
@@ -71,9 +71,9 @@
 
 == Содавикс ломанть те велестэнть ==
 Куриловасо чачсть:
-* [[Никул Эркай]]<ref name="Библиотека_Никул Эркай">[http://www.lib.e-mordovia.ru/Library/?Char=%CD&id=1 Библиотека Мордовской литературы. Никул Эркай (Николай Лазаревич Иркаев)] {{ref-ru}}</ref>— эрзянь сёрмадей
 * [[Бажанов, Владимир Васильевич|Владимир Бажанов]]<ref name="Феоктистов А.П">Феоктистов А.П. Очерки по истории формирования мордовских письменно литературных языков / А.П. Феоктистов. — Саранск: Мордов. кн. изд-во, 2008. — 392 с.  ISBN 978-5-7595-1753-5 {{Ref-ru}}</ref> — эрзянь ютавтыця, этнограф
-
+* [[Еремеев, Дмитрий Иванович|Дмитрий Еремеев]]<ref name="МРОКМ им. И.Д. Воронина_Еремеев Дмитрий Иванович">[http://www.mrkm.ru/news/?id=360  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Еремеев Дмитрий Иванович] {{ref-ru}}</ref> — эрзянь налксиця, морыця 
+* [[Никул Эркай]]<ref name="Библиотека_Никул Эркай">[http://www.lib.e-mordovia.ru/Library/?Char=%CD&id=1 Библиотека Мордовской литературы. Никул Эркай (Николай Лазаревич Иркаев)] {{ref-ru}}</ref>— эрзянь сёрмадей
 == Веленть эрямозо  ==
 Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]] велесэнть улить<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>: ''Рёва угол''; лей ''Романовка''; курот: ''Тарасынка'', ''Больноинькат'', ''Игаевка'', ''Тарасынка'';  латкот: ''Азорлей'', ''Болтин латко'', ''Азорлей''; паксят: ''Бушов угол'', ''Рёва угол ''; ''Курганлей''; ''Лишмень трямо лей''; эрьке ''Романовка''.
 Истя жо ули аваломанень монастырь Инешкипазонь аванть Тихвинэнь пазаванть лемсэ ({{Lang-ru|Тихвинской иконы Божией Матери}}) (1835–1894)<ref name="Геопортал РГО"/>.
