--- a/Знаменское_(Отяжбуе).mw
+++ b/Знаменское_(Отяжбуе).mw
@@ -61,6 +61,15 @@
 }}
 '''Знаменское''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+== Содавикс ломанть те велестэнть ==
+Знаменскойсэ чачсь:
+* [[Парамонов, Иван Григорьевич|Иван Парамонов]]<ref name="МРОКМ им. И.Д. Воронина_Герой Днепра">[http://www.mrkm.ru/news/?id=358  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Герой Днепра] {{ref-ru}}</ref>—  Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+==Веленть эрямозо==
+
+== Лисьм.: ==
+<references />
+
+
 {{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
