--- a/Знаменское_(Отяжбуе).mw
+++ b/Знаменское_(Отяжбуе).mw
@@ -40,7 +40,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               =  
+  |эрицятне               =  72<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -60,6 +60,9 @@
  |язык сайта              = 
 }}
 '''Знаменское''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 95 лом., 2010 иень ловномасонть - 72 лом.  
+
 
 == Содавикс ломанть те велестэнть ==
 Знаменскойсэ чачсь:
