--- a/Наборные_Сыреси_(Отяжбуе).mw
+++ b/Наборные_Сыреси_(Отяжбуе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 208
+  |эрицятне               = 208<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -59,6 +59,18 @@
  |язык сайта              = 
 }}
 '''Наборные Сыреси''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь309 лом., 2010 иень ловномасонть - 207 лом.  
+
+== Содавикс ломанть те велестэнть ==
+Наборные Сыреси велесэ чачсь:
+* [[Узойкин, Александр Петрович|Александр Узойкин]]<ref name="МРОКМ им. И.Д. Воронина_Герой труда">[http://www.mrkm.ru/news/?id=333  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Герой труда] {{ref-ru}}</ref>—  Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}})
+
+==Веленть эрямозо==
+
+== Лисьм.: ==
+<references />
+
 
 {{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
