--- a/Радаев,_Василий_Кузьмич.mw
+++ b/Радаев,_Василий_Кузьмич.mw
@@ -29,7 +29,7 @@
 Рабфаконть прядомадонзо мейле тонавтнесь Ленинградонь госуниверситетсэ<ref>[http://www.mordovmedia.ru/poster/8230/ «Фронтовик, писатель» Выставка, посвященная В.К. Радаеву {{Ref-ru}}]</ref>, конань прядынзе [[1934]] иестэ. Ине Отечествань Войнассо улиця. 1966 иесте саезь СССР-нь Сёрмадеень вейсендявксос совиця. Мордовиянь Государственной премиянь Лауреат<ref name="Библиотека_Радаев "/> (1979), Мордовиянь раськень сёрмадей<ref name="Библиотека_Радаев ">[http://www.lib.e-mordovia.ru/Library/?Char=%D0&id=1  Библиотека Мордовской литературы. Радаев Василий Кузьмич] {{ref-ru}}</ref> (1980).
 
 == Сёрмадовксонзо ==
-Васенце валморозо «Пастухонь думат» лиссь «Якстере теште» кулялопасо. Комсеце иетнестэ [[XX]] пингенть Радаев В. К. седе сеедьстэ кармась сёрмалеме кулялопатнева «Од ломанень вайгель» ({{lang-ru|«Голос молодежи»}}), «Од велесь» ({{lang-ru|«Молодая деревня»}}) ды «Кажочись» ({{lang-ru|«Беднота»}}). Сёрмады художественной сёрмадовкст тиринь [[Эрзянь кель|эрзянь кельсэ]]. Эсензэ войнань икелень сёрмадовкстнэсэ-тевкстнэсэ, ёвтамотнесэ, валморотнесэ сёрмадеесь ёвтни одкстоматнеде велесэ, лиякстоматнеде потмо ёжосо модань важодицятнень, од прогрессэнь теевкстнеде, конат сюлмавтыть ды кемекстыть советэнь масторонть. 
+Васенце валморозо «Пастухонь думат» лиссь «Якстере теште» кулялопасо. Комсеце иетнестэ [[XX]] пингенть Радаев В. К. седе сеедьстэ кармась сёрмалеме кулялопатнева «Од ломанень вайгель» ({{lang-ru|«Голос молодежи»}}), «Од велесь» ({{lang-ru|«Молодая деревня»}}) ды «Кажочись» ({{lang-ru|«Беднота»}}), конат лиснесть [[Москов]]со<ref name="МРОКМ им. И.Д. Воронина_К юбилею В.К. Радаева">[http://www.mrkm.ru/news/?id=331  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К юбилею В.К. Радаева] {{ref-ru}}</ref>. Сёрмады художественной сёрмадовкст тиринь [[Эрзянь кель|эрзянь кельсэ]]. Эсензэ войнань икелень сёрмадовкстнэсэ-тевкстнэсэ, ёвтамотнесэ, валморотнесэ сёрмадеесь ёвтни одкстоматнеде велесэ, лиякстоматнеде потмо ёжосо модань важодицятнень, од прогрессэнь теевкстнеде, конат сюлмавтыть ды кемекстыть советэнь масторонть. 
 
 Кода школасо тонавтыця, Василий Кузьмич сёрмадсь эйкакштнэнь туртовгак. Нейгак паро мельсэ ловныть сонзэ «Тетят-церат» ({{lang-ru|«Отец с сыном»}}), «Бишка», «Интернат»({{lang-ru|«Интернат»}}), «Тимуровецт» ({{lang-ru|«Тимуровцы»}}), «Максозь вал» ({{lang-ru|«Обещанное слово»}}) ды лия ёвтнеманзо.
 
@@ -46,11 +46,11 @@
 Будапештэнь университэтэнть  профессорось Петер Домокош сёрмадыль:{{Цитатань ушодома}} «Сияжар» эрзятьненэ... ули кантницякс ды мелень каицякс тиринь келенть ды ули пурнавкс фольклоронь ды мазычинь» <br />
 ''(«Советская Мордовия», 1984, 27 октября).''{{Цитатань пе}}
 
-Фольклоронь материалтнень ланксо сёрмадозь ульнесть  «Пенза ды Сура» ({{lang-ru|«Пенза и Сура»}}, 1972), «Эрзянь легендат, преданият ды евтамот» ({{lang-ru|«Эрзянские легенды, предания и сказы»}}, 1977), «Тюштя» (1991). 
+Фольклоронь материалтнень ланксо сёрмадозь ульнесть<ref name="МРОКМ им. И.Д. Воронина_К юбилею В.К. Радаева"/>: «Пенза ды Сура» ({{lang-ru|«Пенза и Сура»}}, 1972), «Эрзянь легендат, преданият ды евтамот» ({{lang-ru|«Эрзянские легенды, предания и сказы»}}, 1977), «Тюштя» (1991). 
 
 Кулось [[1991 ие]]нь [[ацамковонь 6 чи]]стэ, калмазь [[Саранск]]ойсэ<ref name="Библиотека_Радаев "/>.
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 [[Категория:Эрзянь валморонь ладсийть|Р]]
 [[Категория:Эрзянь кель|Р]]
