--- a/Чаунза_(Чаунзабуе).mw
+++ b/Чаунза_(Чаунзабуе).mw
@@ -42,7 +42,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               =  9359<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               =  9359<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2015
   |плотность              = 
   |агломерация            = 
@@ -68,9 +68,16 @@
 == Веленть лемденть  ==
 Лемесь-антропоним. Саеви  ''Чаунза'' ~ ''Чамза'', эрзянь «чаво» валстонть, Лецтяви ({{Lang-ru|«Книге письма и меры Д. Пушечникова и А. Костяева» }}) ([[1624 ие]]) ''Кечадей Чамзин<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''.
 
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 9906 лом., 2010 иень ловномасонть - 9463 лом.  
+
 == Содавикс ломанть те велестэнть ==
-== Сёрм.: ==
+Чаунзасо чачсь:
+* [[Горячкин, Тимофей Степанович|Тимофей Горячкин]]<ref name="МРОКМ им. И.Д. Воронина_К 90-летию Героя Советского Союза Т.С. Горячкина">[http://www.mrkm.ru/news/?id=329  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 90-летию Героя Советского Союза Т.С. Горячкина] {{ref-ru}}</ref>—  Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+==Веленть эрямозо==
+
+== Лисьм.: ==
 <references />
+
 
 [[Category:Мордовиянь велеть]]
 [[Category:Чаунзабуень велеть]]
