*Empty MediaWiki Message*

--- a/Атемарь_(Лямбирьбуе).mw
+++ b/Атемарь_(Лямбирьбуе).mw
@@ -72,8 +72,9 @@
 == Содавикс ломанть те велестэнть ==
 * [[Дерябин, Алексей Никитович|Алексей Дерябин]] (1915—1990) — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
 *  [[Прошин Василий Степанович|Василий Прошин]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-майор
+*  [[Стрельников, Иван Михайлович|Иван Стрельников]]<ref name="МРОКМ им. И.Д. Воронина_Кузнец со стажем">[http://www.mrkm.ru/news/?id=321  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Кузнец со стажем] {{ref-ru}}</ref>—  Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}})
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть|А]]
