*Empty MediaWiki Message*

--- a/Симкина_веле_(Покш_Килейбуе).mw
+++ b/Симкина_веле_(Покш_Килейбуе).mw
@@ -78,7 +78,7 @@
 * И. П. Адушкин, Н.В. Зинов — Советэнь Союзонь Маралят ({{Lang-ru|Герои Советского Союза}})
 * В.И. Богатов —  ({{Lang-ru|заслуженный работник народного образования Республики Мордовия}}) 
 * Н.Я. Назаркин — врач 
-* И.П. Астайкин, В.С. Учайкин — советэнь-партиянь прявт
+* [[Астайкин, Иван Павлович|Иван Астайкин]]<ref name="МРОКМ им. И.Д. Воронина_К 95-летию И.П. Астайкина">[http://www.mrkm.ru/news/?id=319  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 95-летию И.П. Астайкина] {{ref-ru}}</ref>, В.С. Учайкин — советэнь-партиянь прявт
 * А.П. Лавровской, Р.В. Макаркиной —  тонавтыцят
 
 ==Веленть эрямодонть==
@@ -87,7 +87,7 @@
 курот: ''Алопе'', ''Варваровка'', ''Варлановка'', ''Ведьпе'', ''Верепе'', ''Ёгоревка'', ''Навоз пе'', ''Од линей'', ''Пичепе'', ''Сэдьбе'', ''Cэдьпе'',  ''Удало ульця'', ''Фарваз'', ''Цеця ульця'', ''Эрзя велине''.<br />
 
 Веленть вакссо ули кшнинь пингень ошке.
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть|С]]
