--- a/Орданьбуе_(Тумобуе).mw
+++ b/Орданьбуе_(Тумобуе).mw
@@ -64,9 +64,9 @@
 Ашти Крутелей лангсо.
 
 ==Содавикс ломанть те велестэнть==
-* [[Сульдина, Анна Дмитриевна|Анна Сульдина]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref><ref name="Библиотека_Сульдина">[http://www.lib.e-mordovia.ru/Library/?Char=%D1&id=11 Библиотека Мордовской литературы. Сульдина Анна Дмитриевна] {{ref-ru}}</ref> — эрзянь валморозей.
+* [[Мартьянова, Екатерина Евдокимовна|Екатерина Мартьянова]]<ref name="МРОКМ им. И.Д. Воронина_Екатерина Евдокимовна Мартьянова">[http://www.mrkm.ru/news/?id=307  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Екатерина Евдокимовна Мартьянова] {{ref-ru}}</ref>—Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}})
 * [[Нуянь Видяз]]<ref name="Библиотека_Четвергов">[http://www.lib.e-mordovia.ru/Library/?Char=%D7&id=2 Библиотека Мордовской литературы. Четвергов Евгений Владимирович] {{ref-ru}}</ref>— эрзянь сёрмадей, советэнь учёной-агроном, прявтредактор [[«Эрзянь Мастор» (кулялопа)|«Эрзянь Мастор» кулялопанть]].
-
+* [[Сульдина, Анна Дмитриевна|Анна Сульдина]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref><ref name="Библиотека_Сульдина">[http://www.lib.e-mordovia.ru/Library/?Char=%D1&id=11 Библиотека Мордовской литературы. Сульдина Анна Дмитриевна] {{ref-ru}}</ref> — эрзянь валморозей.
 
 == Лисьм.: ==
 <references />
