--- a/Рождествено_(Ицял_буе).mw
+++ b/Рождествено_(Ицял_буе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 1468 
+  |эрицятне               = 1468<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -59,6 +59,15 @@
  |язык сайта              = 
 }}
 '''Рождествено'''  —  велесь [[Ицял буе|Ицял буесэ]].
+
+
+== Содавикс ломанть те велестэнть ==
+Рождествено велесэ чачсь:
+* [[Березин, Анатолий Иванович|Анатолий Березин]]<ref name="МРОКМ им. И.Д. Воронина_А.И. Березин и его время">[http://www.mrkm.ru/news/?id=300  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». А.И. Березин и его время] {{ref-ru}}</ref>—  советэнь партиянь важодиця
+==Веленть эрямозо==
+
+== Лисьм.: ==
+<references />
 
 [[Category:Мордовиянь велеть]]
 [[Category:Ицял буень велеть]]
