--- a/Бузакова,_Раиса_Николаевна.mw
+++ b/Бузакова,_Раиса_Николаевна.mw
@@ -27,7 +27,7 @@
 Чачсь Раиса Николаевна [[1931 ие]]нь [[ацамковонь 13 чи]]стэ [[Отяжбуе]]нь [[Ламбаське (Отяжбуень)|Ламбаське велесэ]] сокицянь-видицянь семиясо.
 
 == Шкинеманзо ==
-Валксонь пурнамось – те пек покш, стака тев. Эряви неемс, муемс валонть весе енксонзо, муемс тарканзо сермадовкссо, кортамсто. Мордовиянь Образованиянь министерствасо ули «Эрзянь келень орфографиянь валкс». Нама, эряволь бу сонзэ нолдамс. Те рукописенть анокстыцянзо Р.Н.Бузакова ды Е.Н.Лисина. Меельцеде «Эрзянь келень орфографической словаресь» нолдазель 1978 иестэ. 
+Валксонь пурнамось – те пек покш, стака тев. Эряви неемс, муемс валонть весе енксонзо, муемс тарканзо сермадовкссо, кортамсто. Мордовиянь Образованиянь министерствасо ули «Эрзянь келень орфографиянь валкс». Нама, эряволь бу сонзэ нолдамс. Те рукописенть анокстыцянзо Р.Н.Бузакова ды Е.Н.Лисина. Меельцеде «Эрзянь келень орфографической валксось» нолдазель 1978 иестэ. Сон нолдыця «Словарь синонимов эрзянского языка», вейсэсёрмадыця ды редактор «Эрзянско-русский словарь», конасонть малав 27 тёж. валт эрзянь келень неень шкань (нолдазь 1993 иестэ<ref name="МРОКМ им. И.Д. Воронина_С юбилеем!">[http://www.mrkm.ru/news/?id=296  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». С юбилеем!] {{ref-ru}}</ref>).
 
 * Синонимия мордовских языков [Текст] : Автореферат дис. на соискание ученой степени кандидата филологических наук. (10666) / Тартуский гос. ун-т. - Тарту : [б. и.], 1970. - 19 с.
 * Синонимы в мордовских языках [Текст] / Р.Н. Бузакова ; Науч.-исслед. ин-т яз., литературы, истории и экономики при Совете Министров Мордов. АССР. - Саранск : Морд. кн. изд-во, 1977. - 247 с.; 20 см.
@@ -49,6 +49,10 @@
 
 == Сёрм. ==
 * Эрзянь правда 2011/1
+
+== Лисьм.: ==
+<references />
+
 
 [[Category:Ломанть|Б]]
 [[Категория:Эрзякс кортыцят|Б]]
