--- a/Кацядав_(Инесаро_буе).mw
+++ b/Кацядав_(Инесаро_буе).mw
@@ -40,7 +40,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 486
+  |эрицятне               = 488<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -61,6 +61,16 @@
 }}
 {{Лия смустьтне|Кочетовка (смустьтне)}}
 '''Кацядав''' ({{lang-ru|Кочетовка}})  — мокшонь веле [[Мордовия]]со [[Инесаро буе]]сэ.
+
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 597 лом., 2010 иень ловномасонть - 488 лом.  
+
+== Содавикс ломанть те велестэнть ==
+Кацядав велесэ чачсь:
+* [[Азыркин, Михаил Павлович|Михаил Азыркин]]<ref name="МРОКМ им. И.Д. Воронина_Полный кавалер ордена Славы">[http://www.mrkm.ru/news/?id=290  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Полный кавалер ордена Славы] {{ref-ru}}</ref> — Ине Ойнанть улиця, ({{Lang-ru| полный кавалер ордена Славы}}) 
+==Веленть эрямозо==
+
+== Лисьм.: ==
+<references />
 
 
 [[Category:Мордовиянь велеть]]
