*Empty MediaWiki Message*

--- a/Целпанова_(Отяжбуе).mw
+++ b/Целпанова_(Отяжбуе).mw
@@ -61,6 +61,7 @@
 '''Целпанова''' ({{Lang-ru|Челпаново}}) — эрзянь<ref name="МРОКМ им. И.Д. Воронина_Не вернулся из боя">[http://www.mrkm.ru/news/?id=393  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». «Не вернулся из боя …»] {{ref-ru}}</ref> веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
 ==Содавикс ломанть те велестэнть==
+* [[Котков, Константин Александрович|Константин Котков]]<ref name="МРОКМ им. И.Д. Воронина_К 100-летию профессора К.А. Коткова (1911 – 1996)">[http://www.mrkm.ru/news/?id=286  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 100-летию профессора К.А. Коткова (1911 – 1996)] {{ref-ru}}</ref> — эрзянь учённой, профессор
 * [[Пугачев, Арсений Филиппович|Арсений Пугачев]]<ref name="МРОКМ им. И.Д. Воронина_Не вернулся из боя"/> — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
 
 == Лисьм.: ==
