--- a/Левож_(Оразайбуе).mw
+++ b/Левож_(Оразайбуе).mw
@@ -39,7 +39,7 @@
  |высота центра ЭТ        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 1036<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               = 1036<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -66,7 +66,7 @@
 {{oq|ru|В «СНМ  Пензенской  губернии» (1869) –  Левжа (Богдашкино), село из 141 двора Саранского уезда.}}
 {{Цитатань пе}}
 
-Эрицятнеде: [[2002 ие]]стэ ульнесь 1005 лом., 2010 иень ловномасонть - 1036 ломанть. 
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 1005 лом., 2010 иень ловномасонть - 1036 ломанть. 
 
 == Веленть лемденть  ==
 Лемесь-гидроним<ref name="Память, запечатленная в слове"/>. Ули лия арсема, лемесь саеви {{Lang-mdf|левож}} {{Lang-ru|«мочало»}}<ref name="РГО_с. Левжа"/> валстонть. 
@@ -75,7 +75,7 @@
 Левож велесэ чачсть:
 * [[Учватов, Николай Иванович|Николай Учватов]]<ref name="Библиотека_Учватов">[http://www.lib.e-mordovia.ru/Library/?Char=%D3&id=0  Библиотека Мордовской литературы. Учватов Николай Иванович] {{ref-ru}}</ref>—  мокшонь валморозей, сёрмадей
 * [[Учватов, Павел Иванович|Павел Учватов]]<ref name="МРОКМ им. И.Д. Воронина_Мастер сцены">[http://www.mrkm.ru/news/?id=497  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Мастер сцены] {{ref-ru}}</ref> — актёр
-* [[Антонова, Мария Николаевна|Мария Антонова]]<ref name="Музыкальная энциклопедия">[http://enc-dic.com/enc_music/Antonova-M-N-397.html Музыкальная энциклопедия: Антонова М. Н.] {{ref-ru}}</ref>—  мокшонь морыця
+* [[Антонова, Мария Николаевна|Мария Антонова]]<ref name="Музыкальная энциклопедия">[http://enc-dic.com/enc_music/Antonova-M-N-397.html Музыкальная энциклопедия: Антонова М. Н.] {{ref-ru}}</ref><ref name="МРОКМ им. И.Д. Воронина_С юбилеем!">[http://www.mrkm.ru/news/?id=259  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». С юбилеем!] {{ref-ru}}</ref>—  мокшонь морыця
 ==Веленть эрямозо==
 
 == Лисьм.: ==
