*Empty MediaWiki Message*

--- a/Пашино_(Отяжбуе).mw
+++ b/Пашино_(Отяжбуе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 0
+  |эрицятне               = 0<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -59,6 +59,14 @@
  |язык сайта              = 
 }}
 '''Пашино''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+
+== Содавикс ломанть те велестэнть ==
+Пашино велесэ чачсь:
+* [[Ефремов, Дмитрий Иванович|Дмитрий Ефремов]]<ref name="МРОКМ им. И.Д. Воронина_Герой Советского Союза">[http://www.mrkm.ru/news/?id=248  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Герой Советского Союза] {{ref-ru}}</ref>—  Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+==Веленть эрямозо==
+
+== Лисьм.: ==
+<references />
 
 {{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
