*Empty MediaWiki Message*

--- a/Шемышень_буе_(Пенза_ёнкс).mw
+++ b/Шемышень_буе_(Пенза_ёнкс).mw
@@ -54,7 +54,7 @@
 |лом<ref name="Полубояров"/>. || 18422 || 38402 ||  67489 || 72461|| 46602 || 36996 || 34021||26581 || 22765 || 19063 ||18904 ||17021
 |}
 
-Неень шкасто весемикс эрить<ref name='ЧИСЛЕННОСТЬ И РАЗМЕЩЕНИЕ'>[http://pnz.gks.ru/wps/wcm/connect/rosstat_ts/pnz/resources/a7ab670042a64713a4f3ad86540d86a5/Том+1+Численность+и+размещение+населения+Пензенской+области.pdf ЧИСЛЕННОСТЬ И РАЗМЕЩЕНИЕ НАСЕЛЕНИЯ ПЕНЗЕНСКОЙ ОБЛАСТИ ИТОГИ ВСЕРОССИЙСКОЙ ПЕРЕПИСИ НАСЕЛЕНИЯ 2010 ГОДА]{{ref-ru}}</ref>: 17661 лом. (1,24 %, 15-це тарка): 8314 цёра ломанть, 9347 ава ломанть, 10,48 лом./вп²   
+Неень шкасто весемикс эрить<ref name='ЧИСЛЕННОСТЬ И РАЗМЕЩЕНИЕ'>[http://pnz.gks.ru/wps/wcm/connect/rosstat_ts/pnz/resources/a7ab670042a64713a4f3ad86540d86a5/Том+1+Численность+и+размещение+населения+Пензенской+области.pdf ЧИСЛЕННОСТЬ И РАЗМЕЩЕНИЕ НАСЕЛЕНИЯ ПЕНЗЕНСКОЙ ОБЛАСТИ. ИТОГИ ВСЕРОССИЙСКОЙ ПЕРЕПИСИ НАСЕЛЕНИЯ 2010 ГОДА]{{ref-ru}}</ref>: 17661 лом. (1,24 %, 15-це тарка): 8314 цёра ломанть, 9347 ава ломанть, 10,48 лом./вп²   
 
 [[Эрзят]] ды [[мокшот]] — 57,2%, [[рузт]] — 33,8%, [[печкаст]] — 7,8%
 
