*Empty MediaWiki Message*

--- a/Бегуч_веле.mw
+++ b/Бегуч_веле.mw
@@ -40,8 +40,8 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 358
-  |год переписи           = 2004
+  |эрицятне               = 259<ref name='ЧИСЛЕННОСТЬ И РАЗМЕЩЕНИЕ'>[http://pnz.gks.ru/wps/wcm/connect/rosstat_ts/pnz/resources/a7ab670042a64713a4f3ad86540d86a5/Том+1+Численность+и+размещение+населения+Пензенской+области.pdf ЧИСЛЕННОСТЬ И РАЗМЕЩЕНИЕ НАСЕЛЕНИЯ ПЕНЗЕНСКОЙ ОБЛАСТИ. ИТОГИ ВСЕРОССИЙСКОЙ ПЕРЕПИСИ НАСЕЛЕНИЯ 2010 ГОДА]{{ref-ru}}</ref>
+  |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
   |национальный состав    = 
@@ -62,5 +62,14 @@
 '''Бегуч велесь''' — те эрзянь веле [[Пенза ёнкс|Пенза ёнкссонть]] [[Камешкир буе|Камешкир буесэ]].
 
 Эрицятне — 358 лом. (2004), 147 кудот.
+
+
+== Содавикс ломанть те велестэнть ==
+Бегуч велесэ чачсь:
+
+==Веленть эрямозо==
+
+== Лисьм.: ==
+<references />
 
 [[Category:Эрзянь велеть]]
