--- a/Евсевьев,_Макар_Евсевьевич.mw
+++ b/Евсевьев,_Макар_Евсевьевич.mw
@@ -83,14 +83,13 @@
 {{oq|ru|«Основы мордовской грамматики» М.Е Евсевьева представляют собой явление чрезвычайно отрадное: они являются ярким свидетельством начавшегося национального возрождения мордвы…»}}
 {{Цитатань пе}}
 
-«Эрзянь-рузонь валксось» лиссь [[1931 ие]]стэ Московсо. Печатьстэ лисемантень лездасть Д.В. Бубрих ды Ф.Ф. Советкин. Те валксось ушодызе эрзянь валташтавксонть (лексиканть) системань коряс ванноманзо. Валксось теезь ансяк «к» букванть видьс, теке марто эрзянь диалектологиясо сон саи эрявикс тарка. Сонзэ эйс пурназь 2500 валт ды валсюлмавкст эрзянь ламо кортавкстнэстэ. Тешкстазь, кона валось кодамо велестэ, вариантсо ды смустьсэ вастневи. Те вастневемась кемекстави [[валмеревкс]]сэ, [[валъёвтавкс]]со, [[моро]]сто саевкссэ.
+«Эрзянь-рузонь валксось» лиссь [[1931 ие]]стэ Московсо. Печатьстэ лисемантень лездасть Д.В. Бубрих ды [[Советкин, Федор Фролович|Ф.Ф. Советкин]]. Те валксось ушодызе эрзянь валташтавксонть (лексиканть) системань коряс ванноманзо. Валксось теезь ансяк «к» букванть видьс, теке марто эрзянь диалектологиясо сон саи эрявикс тарка. Сонзэ эйс пурназь 2500 валт ды валсюлмавкст эрзянь ламо кортавкстнэстэ. Тешкстазь, кона валось кодамо велестэ, вариантсо ды смустьсэ вастневи. Те вастневемась кемекстави [[валмеревкс]]сэ, [[валъёвтавкс]]со, [[моро]]сто саевкссэ.
 
-Кулось Макар Евсеевич [[1931]] иень [[панжиковонь 10 чи]]стэ, калмазель [[Казань ош]]со.140-иень М.Е. Евсевьевень чачома чистензэ, 2004-це иестэ, челькезе ульнесь калмазь [[Саранск]]ойсэ<ref name="Библиотека Мо">[http://www.lib.e-mordovia.ru/Library/?Char=%C5&id=0 Библиотека Мордовской Литературы: Евсевьев Макар Евсевьевич]{{ref-ru}}</ref>, С. Эрьзя скульпторонть, И. Яушев морыцянть, Л. Кирюков композиторонть ваксс. Сюконямо тень кисэ [[Эрзянь келень идема Фонд]]онтень. 
+Кулось Макар Евсеевич [[1931]] иень [[панжиковонь 10 чи]]стэ, калмазель [[Казань ош]]со.140-иень М.Е. Евсевьевень чачома чистензэ, 2004-це иестэ, челькезе ульнесь калмазь [[Саранск]]ойсэ<ref name="Библиотека Мо">[http://www.lib.e-mordovia.ru/Library/?Char=%C5&id=0 Библиотека Мордовской Литературы: Евсевьев Макар Евсевьевич]{{ref-ru}}</ref>, [[Степан Эрьзя|С. Эрьзя]] скульпторонть, [[Яушев, Илларион Максимович|И. Яушев]] морыцянть, [[Кирюков, Леонтий Петрович|Л. Кирюков]] композиторонть ваксс. Сюконямо тень кисэ [[Эрзянь келень идема Фонд]]онтень. 
 
 Сонзэ лемезэ максозь Мордовиянь пединститутонтень. Тесэ сонзэ лемс панжозь музей. [[1964 ие]]стэ саезь ютавтовить Евсевьевень лементень алтазь ловномат. Сарансо лемсэнзэ ули куро, ловномакудо, Саранонь монументально-скульптурань комплекссэ – бюстозо, республикань краеведень музейсэ – фотокувт, кедьчелькензэ, кедьёнксонзо.
 
 1961-1966-це иетнестэ лиссть 5 томсо «Избранные труды М.Е. Евсевьева», 1959-це иестэ - «Мордовская свадьба». 2004 иестэ нолдазель «М.Е. Евсевьев: жизнь мордвы в фотографиях» альбомось. Неень Покшчинтень одс нолдазь «Мордовская свадьба», нолдазь мазыйстэ, артовкс марто.
-
 
 == Фотокувт== 
 <gallery>
