*Empty MediaWiki Message*

--- a/Иркаев,_Николай_Лазаревич.mw
+++ b/Иркаев,_Николай_Лазаревич.mw
@@ -24,7 +24,7 @@
 }}
 '''Никул Эркай<ref name="Библиотека_Никул Эркай">[http://www.lib.e-mordovia.ru/Library/?Char=%CD&id=1 Библиотека Мордовской литературы. Никул Эркай (Николай Лазаревич Иркаев)] {{ref-ru}}</ref>''' ({{Lang-ru|Николай Лазаревич Иркаев<ref name="Библиотека_Никул Эркай"/>}}, [[1906]] [[панжиковонь 22 чи]]  - [[1978]] [[аштемковонь 15 чи]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей, валморозей, драматург, ютавтыця. Эрзя<ref name="inpenza">[http://inpenza.ru/people/irkayev-n-l.php inpenza.ru|ИРКАЕВ Николай Лазаревич (Никул Эркай){{Ref-ru}}]</ref>. 
 
-Чачсь [[1906]] [[панжиковонь 22 чи]]стэ [[Курилова (Рамаданбуе)|Курилова]]<ref name="inpenza"/> эрзянь<ref name="Геопортал РГО">[http://geo13.ru/atlas/provinces/56 Геопортал РГО: ПРИРОДНОЕ И КУЛЬТУРНОЕ НАСЛЕДИЕ МУНИЦИПАЛЬНЫХ РАЙОНОВ / РОМОДАНОВСКИЙ РАЙОН{{Ref-ru}}]</ref> велесэ неень [[Рамаданбуе]]сэ  сокиця-видицянь семиясо. Теске прядсь колмо классо школанть<ref name="Кудашкина О">Кудашкина Ольга Сергеевна. Поэтика прозы Никула Эркая: диссертация ... кандидата филологических наук : 10.01.02.- Саранск, 2006.- 180 с.: ил. РГБ ОД, 61 06-10/1120 {{ref-ru}}, {{ref-myv}}</ref>. [[1927 ие]]стэ прядызе Пензань партиянь школанть, [[1930 ие]]стэ Весесоюзлнь коммунистэнь куляньсёрмадеень институтонть. [[1933 ие]]стэ важодлсь Мордовиянь шкинемань НИИ-сэ.
+Чачсь [[1906]] [[панжиковонь 22 чи]]стэ [[Курилова (Рамаданбуе)|Курилова]]<ref name="inpenza"/> эрзянь<ref name="Геопортал РГО">[http://geo13.ru/atlas/provinces/56 Геопортал РГО: ПРИРОДНОЕ И КУЛЬТУРНОЕ НАСЛЕДИЕ МУНИЦИПАЛЬНЫХ РАЙОНОВ / РОМОДАНОВСКИЙ РАЙОН{{Ref-ru}}]</ref> велесэ неень [[Рамаданбуе]]сэ  сокиця-видицянь семиясо. Теске прядсь колмо классо школанть<ref name="Кудашкина О">Кудашкина Ольга Сергеевна. Поэтика прозы Никула Эркая: диссертация ... кандидата филологических наук : 10.01.02.- Саранск, 2006.- 180 с.: ил. РГБ ОД, 61 06-10/1120 {{ref-ru}}, {{ref-myv}}</ref>. [[1927 ие]]стэ прядызе Пензань партиянь школанть, [[1930 ие]]стэ Весесоюзлнь коммунистэнь куляньсёрмадеень институтонть. [[1933 ие]]стэ важодсь Мордовиянь шкинемань НИИ-сэ<ref name="МРОКМ им. И.Д. Воронина_105 лет Н.Л. Иркаеву">[http://www.mrkm.ru/news/?id=229  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». 105 лет Н.Л. Иркаеву] {{ref-ru}}</ref>.
 
 Литературасо шкинемазо ушодовсь XX пингень 20-сь иетнестэ. Васенце валморонь пурнавксозо «Модась окстомсь» лись [[1932 ие]]стэ [[Саран ош]]со, мейле «Корёнтнэ наксадсть»  ёвтнемань пурнавкс. [[1934 ие]]стэ важодсь [[«Эрзянь правда» (кулялопа)|«Якстере теште»]], «Эрзянь коммуна», «Советский артист», «Полярная кочегарка» кулялопатнесэ ды [[Сурань толт (журнал-ковставкс)|«Сурань толт»]] ковставкссо. Теке жо иестэнть ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов. 
 
