/* Содавикс ломанть тестэнь */

--- a/Саран_ош.mw
+++ b/Саран_ош.mw
@@ -76,12 +76,14 @@
 
 == Содавикс ломанть тестэнь ==
 Саран ошсо чачсть:
+*  [[Бобков, Виктор Николаевич|Виктор Бобков]]<ref name="МРОКМ им. И.Д. Воронина_К 85-летию Героя Советского Союза В.Н. Бобкова">[http://www.mrkm.ru/news/?id=220  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 85-летию Героя Советского Союза В.Н. Бобкова] {{ref-ru}}</ref> — [[Советэнь Союзонь Мараля]] (1944 ие) ({{Lang-ru|Герой Советского Союза}}), сехте од Мордовиясто.
 *  [[Гридин. Иван Николаевич|Иван Гридин]]<ref name="МРОКМ им. И.Д. Воронина_Почетный гражданин города Саранска">[http://www.mrkm.ru/news/?id=317  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Почетный гражданин города Саранска] {{ref-ru}}</ref> — тонавтыця
 *  [[Маючая, Клавдия Яковлевна|Клавдия Маючая]]<ref name="МРОКМ им. И.Д. Воронина_Клавдия Яковлевна Маючая">[http://www.mrkm.ru/news/?id=481  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Клавдия Яковлевна Маючая] {{ref-ru}}</ref> — СССР-нь шожда атлетикань заслуженной мастер спорта
 *  [[Мухин, Владимир Михайлович|Владимир Мухин]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-майор
 *  [[Озерин, Алексей Николаевич|Алексей Озерин]]<ref name="МОУ «Кочкуровская СООЩ»_ Озерин Алексей Николаевич">[http://kochscool.edurm.ru/p88aa1.html МОУ «Кочкуровская средняя общеобразовательная школа». Озерин Алексей Николаевич]{{Ref-ru}}</ref> — [[Советэнь Союзонь Мараля]] (1944 ие) ({{Lang-ru|Герой Советского Союза}})
 *  [[Суняйкин, Виктор Тихонович|Виктор Суняйкин]]<ref name="МРОКМ им. И.Д. Воронина_К 65-летию мастера">[http://www.mrkm.ru/news/?id=392 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 65-летию мастера] {{ref-ru}}</ref> — чувтосто керсиця
 *  [[Сущинский, Владимир Александрович|Владимир Сущинский]]<ref name="МРОКМ им. И.Д. Воронина_В.А. Сущинский">[http://www.mrkm.ru/news/?id=389 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». В.А. Сущинский - фронтовой кинооператор] {{ref-ru}}</ref> — киноператор
+
 ==Веленть эрямозо==
 
 == Лисьм.: ==
