--- a/Покш_Пестровка_(Ицял_буе).mw
+++ b/Покш_Пестровка_(Ицял_буе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 111<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               = 111<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -60,7 +60,12 @@
 }}
 '''Покш Пестровка''' ({{Lang-ru|Большая Пестровка}})  —  велесь [[Ицял буе|Ицял буесэ]].
 
-== Сёрм.: ==
+== Содавикс ломанть те велестэнть ==
+Покш Пестровка велесэ чачсь:
+* [[Живоедова, Вера Константиновна|Вера Живоедова]]<ref name="МРОКМ им. И.Д. Воронина_С юбилеем!">[http://www.mrkm.ru/news/?id=215  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». С юбилеем!] {{ref-ru}}</ref>—  Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+==Веленть эрямозо==
+
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
