*Empty MediaWiki Message*

--- a/Клеянкин,_Алексей_Васильевич.mw
+++ b/Клеянкин,_Алексей_Васильевич.mw
@@ -10,8 +10,8 @@
  |чачома тарка         = {{ЧачомаТарка|Цибирьцина веле||Цибирьцина (Тумобуе)}}, {{ЧачомаТарка|Тумобуе}}, {{ЧачомаТарка|Мордовия}}
  |гражданчи            = {{Масторкоцт|СССР}}<br /> {{Масторкоцт|Россия}}
  |кедьалксчи           = 
- |кулома чись          = 
- |кулома тарка         = {{КуломаТарка|}}
+ |кулома чись          = 16.01.1986
+ |кулома тарка         = {{КуломаТарка|Саран ош}}
  |тетязо               = 
  |авазо                = 
  |мирдезэ              = 
@@ -23,15 +23,18 @@
  |википурнавкс         = 
 }}
 
-'''Клеянкинэнь Алексей Васильевич''' ([[1911 ие]]нь [[эйзюрковонь 22 чи]]стэ [[Тумобуе]]ень [[Цибирьцина (Тумобуе)|Цибирьцина велесэ]]<ref>[http://cheberchino.edurm.ru/index.php/component/content/category/24-metodichka Наша гордость] {{Ref-ru}}</ref>(икеле те ульнесь Симбирской губерниянь Алатырень уездэнь) – эрзянь содавикс ученой, краевед. 
+'''Клеянкинэнь Алексей Васильевич''' ([[1911 ие]]нь [[эйзюрковонь 22 чи]]стэ [[Тумобуе]]ень [[Цибирьцина (Тумобуе)|Цибирьцина велесэ]]<ref>[http://cheberchino.edurm.ru/index.php/component/content/category/24-metodichka Наша гордость] {{Ref-ru}}</ref> – [[1986 ие]]нь [[якшамковонь 16 чи]]стэ [[Саран ош]]) — эрзянь содавикс ученой, краевед. 
 
-Чачсь Алексей Клеянкинэнь сокицянь-видицянь семиясо. 
+Чачсь Алексей Васильевич Клеянкин [[Тумобуе]]ень [[Цибирьцина (Тумобуе)|Цибирьцина велесэ]] (икеле те ульнесь Симбирской губерниянь Алатырень уездэнь) сокицянь-видицянь семиясо .  
 
-Автобиографиясонзо Алексей Васильевич сермадсь: 
-{{Цитатань ушодома}} 
-«…тетям, эсь хозяйствасо важодемадонть башка, малав эрьва иестэ тукшныль ярмакто плотницямо ды вейке стройкасонть пек томбавсь. 1927 иестэ кулось. Авам 1930 иестэ совась колхозс. 1940 иестэ кулось. Монгак вишка пингстэ саезь важодинь кудонь хозяйствасо. 1927 иестэ, школань прядомадо мейле, молинь тонавтнеме Промзина велень профтехшколав, конань прядыя 1930 иестэ ды получинь слесарень квалификация…»<ref>[http://www.erziapr.ru/index.php/library?start=35 Чачсь чеберчинасо] {{Ref-myv}}</ref>.{{Цитатань пе}}
+Автобиографиясонзо Алексей Васильевич истя сермадсь:
+{{Цитатань ушодома}} ({{Lang-myv|''«…тетям, эсь хозяйствасо важодемадонть башка, малав эрьва иестэ тукшныль ярмакто плотницямо ды вейке стройкасонть пек томбавсь. [[1927 ие]]стэ кулось. [[Ава]]м 1930 иестэ совась вейсхозс. [[1940 ие]]стэ кулось. Монгак вишка пингстэ саезь важодинь кудонь хозяйствасо. 1927 иестэ, школань прядомадо мейле, молинь тонавтнеме Промзина велень профтехшколав, конань прядыя [[1930 ие]]стэ ды получинь слесарень квалификация…»<ref>[http://www.erziapr.ru/index.php/library?start=35 Чачсь чеберчинасо] {{Ref-myv}}</ref>''}}
+{{oq|ru|«…отец, помимо работы в своем хозяйстве, почти ежегодно уходил на заработки (плотничая) и на одной из строек получил травму. В 1927 году он умирает. Мать в 1930 году вступает в колхоз, работает рядовой колхозницей. В 1940 году она умерла. Сам я тоже с детских лет работал в домашнем хозяйстве, а в 1927 году, по окончании сельской школы, поступил учиться в профтехшколу в селе Промзино (Ульяновской обл.), которую окончил в1930 году, получив квалификацию слесаря…»<ref name="МРОКМ им. И.Д. Воронина_Родом из Чеберчино">[http://www.mrkm.ru/news/?id=214  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Родом из Чеберчино] {{ref-ru}}</ref>}}
+{{Цитатань пе}}
 
-== Сёрм.: ==
+1980 иестэ сонензэ максозь «Заслуженный деятель науки МАССР» лем.
+Кулось [[1986 ие]]нь [[якшамковонь 16 чи]]стэ<ref name="МРОКМ им. И.Д. Воронина_Родом из Чеберчино"/>.
+== Лисьм.: ==
 <references />
 [[Category:Эрзянь кель|К]]
 [[Category:Эрзянь Ине ломанть|К]]
