*Empty MediaWiki Message*

--- a/Давыд_веле_(Кочкурбуе).mw
+++ b/Давыд_веле_(Кочкурбуе).mw
@@ -72,11 +72,11 @@
 
 == Содавикс ломанть те велестэнть ==
 Давыд велесэ чачсть:
-* [[Матезиус, Мария Ефимовна|М.Е. Матезиус]]<ref>[http://www.erziapr.ru/index.php/library/318--70- Матезиуснэнь - 70 иеть ] {{Ref-myv}}</ref>  — содавикс артистка МАССР
-* А.Н. Пинямаскин<ref>[http://www.gsrm.ru/gosudarstvennoe-sobranie-rm-pyatogo-sozyva/structure-of-the-state-assembly/deputaty-gosudarstvennogo-sobraniya-rm-pyatogo-sozyva/239/  Госсобрание РМ: ПИНЯМАСКИН АНАТОЛИЙ НИКОЛАЕВИЧ] {{Ref-ru}}</ref> — Мордовия Республиканть Прявт Пурнавксонть депутат  
+* [[Матезиус, Мария Ефимовна|М.Е. Матезиус]]<ref>[http://www.erziapr.ru/index.php/library/318--70- Матезиуснэнь - 70 иеть ] {{Ref-myv}}</ref><ref name="МРОКМ им. И.Д. Воронина_С юбилеем!">[http://www.mrkm.ru/news/?id=211  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». С юбилеем!] {{ref-ru}}</ref>  — МАССР-нь содавикс артистка 
+* А.Н. Пинямаскин<ref>[http://www.gsrm.ru/gosudarstvennoe-sobranie-rm-pyatogo-sozyva/structure-of-the-state-assembly/deputaty-gosudarstvennogo-sobraniya-rm-pyatogo-sozyva/239/  Госсобрание РМ: ПИНЯМАСКИН АНАТОЛИЙ НИКОЛАЕВИЧ] {{Ref-ru}}</ref> — Мордовия Республиканть депутатонь пурнавксонть Прявт   
 
 ==Веленть эрямозо==
-1930 иестэ теезь-пурназь вейсхоз «Правда», 1996 иестэ  — «Сурские зори» вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК «Сурские зори»}}). Неень шкасто велесенть ули ушодксонь тонавтнеме тарка, Культурань кудо, лавка, Ине Ойнасо маштозь ушмантнэнень ледстнема тарка.
+[[1930 ие]]стэ теезь-пурназь вейсхоз «Правда», [[1996 ие]]стэ  — «Сурские зори» вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК «Сурские зори»}}). Неень шкасто велесенть ули ушодксонь тонавтнеме тарка, Культурань кудо, лавка, Ине Ойнасо маштозь ушмантнэнень ледстнема тарка.
 
 == Сёрм.: ==
 <references />
