*Empty MediaWiki Message*

--- a/Кенде_(Тумобуе).mw
+++ b/Кенде_(Тумобуе).mw
@@ -70,7 +70,7 @@
 == Содавикс ломанть те велестэнть ==
 Кендевелесэ чачсть:
 * [[Араповонь Саша|Александр Арапов]] — [[эрзя]]нь [[сёрмадей]], валморонь ладсий
-* [[Щеглов, Александр Сергеевич|Александр Щеглов]]<ref name="«Сятко2003_5»">«Сятко», №1,1― 114, 2003 ие, 5-це лоп. Зярдо ды кие журналонть прявтсоль{{Ref-myv}}</ref>  — сёрмадей, 01.1967 ― 12.1971 [[Сятко (журнал-ковставкс)|Сятко ковставксонть]] прявтредактор.
+* [[Щеглов, Александр Сергеевич|Александр Щеглов]]<ref name="МРОКМ им. И.Д. Воронина_К юбилею писателя!">[http://www.mrkm.ru/news/?id=212  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К юбилею писателя!] {{ref-ru}}</ref>  — сёрмадей, 01.1967 ― 12.1971 [[Сятко (журнал-ковставкс)|Сятко ковставксонть]] прявтредактор<ref name="«Сятко2003_5»">«Сятко», №1,1― 114, 2003 ие, 5-це лоп. Зярдо ды кие журналонть прявтсоль{{Ref-myv}}</ref>.
 * О.П. Василькина — заслуженной тонавтыця МАССР-нь
 * М.М. Федотова — заслуженной Мордовиянь шумбрачинь максыця 
 * [[Седойкин, Михаил Григорьевич|Михаил Седойкин]]<ref>[http://nudej.livejournal.com/28653.html Эрзянь морот: Михаил Седойкин]{{ref-myv}}</ref> — морыця
@@ -80,8 +80,7 @@
 
 Ули фольклоронь-этнографиянь пурнавкс «Эрзява»<ref>[http://www.discogs.com/Этнографический-Ансамбль-Села-Чиндяново-Дубенского-Р/release/3990414 Этнографический Ансамбль Села Чиндяново Дубенского Района Мордовской АССР «Эрзянка» ‎– Кенде Веле. Про Село Чиндяново] {{ref-ru}}, {{ref-myv}}</ref>.
 
-Кенде ваксонзо ули  — именькень культурань ёмазь  ошке ды велине. 
-
+Кенде ваксонзо ули  — именькень культурань ёмазь ошке ды велине. 
 
 == Лисьм.: ==
 <references />
