--- a/Радаевень,_Василий_Иванович.mw
+++ b/Радаевень,_Василий_Иванович.mw
@@ -23,13 +23,13 @@
  |википурнавкс         = 
 }}
 {{Лия смустьтне|Радаев (смустьтне)}}
-'''Радаевень Василий Иванович''' (псевдонимезэ: '''Радин-Аловский<ref>[http://www.lib.e-mordovia.ru/Library/?Char=%D0&id=0 Мордовская литература:Радаев (Радин-Аловский) Василий Иванович]{{Ref-ru}}</ref>''') — [[Эрзя|эрзянь]]<ref name="Колхозонь прявтсто">[http://www.erziapr.ru/index.php/library/298-2011-03-23-07-50-05 Колхозонь прявтсто - сермадеекс]{{Ref-myv}}</ref>сёрмадей. 
+'''Радаевень Василий Иванович''' (псевдонимезэ: '''Радин-Аловский<ref>[http://www.lib.e-mordovia.ru/Library/?Char=%D0&id=0 Мордовская литература:Радаев (Радин-Аловский) Василий Иванович]{{Ref-ru}}</ref>''') — [[Эрзя|эрзянь]]<ref name="Колхозонь прявтсто">[http://www.erziapr.ru/index.php/library/298-2011-03-23-07-50-05 Колхозонь прявтсто - сермадеекс]{{Ref-myv}}</ref><ref name="МРОКМ им. И.Д. Воронина_В.И. Радин-Аловский">[http://www.mrkm.ru/news/?id=209  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». В.И. Радин-Аловский] {{ref-ru}}</ref> сёрмадей. 
 
 Чачсь [[1901 ие]]нь [[эйзюрковонь 11 чи]]стэ Пензань губерниянь Городищенской уездэнь [[Алова веле (Никольской буе)|Алова веле]]сэ ( ней [[Пензань ёнкс|Пензань ёнксонь]] [[Никольской буе (Пензань ёнкс)|Никольской буень]]) сокицянь-видицянь покш семиясо. [[8 (ловома вал)|Кавксо]] иесэ уш кармась тетянстэнь кудоютконь ды паксянь тевтнень топавтомсто лездамо. Теке шкастонть парсте прядызе эсь велень школанть. Мейле саизь Якстере Армияв, косто велявтсь ансяк [[1925 ие]]сте. Тюрсь ашотнень ды Антоновонь банданть каршо. Секе иестэнть тусь совпартшколав, конань прядомадо мейле кучизь важодеме Мордовиянь [[Кочкурбуе]]в. Васня ульнесь кочказь вейсхозонь прявтокс, мейле — «Якстере колхоз»  ({{Lang-ru|«Красный колхоз»}}) буень кулялопанть редакторокс. Сесте ушодкскак сёрмадомо. 
 
 1932-1942 иетнестэ важоди «Эрзянь коммуна» ({{Lang-ru|«Эрзянская коммуна»}}), «Красная Мордовия» кулялопатнесэ, ды Мордовиянь Сёрмадеень пурнавксонть Ветикуросо.
 
-Саезь 1942 иестэ - турем киксэ (фронтсо)<ref>[http://www.mokshen-pr.ru/?id_refer=4072 МОКШЭРЗЯНЬ ПИСАТЕЛЬХНЕ, КОНАТ АШЕСТЬ МРДА ВОЙНАСТА]{{Ref-mdf}}</ref>. Содавиксэв валморозеенть [[Артур Моро|Артур Моро]] марто ойнань шкасто нолдась 20-сь леднема бригадань НКВД «Вперед за Родину» кулялопаньть. Седе тов, пенсияв туема шканть видс ([[1962 ие]]) важодсь [[«Эрзянь коммуна» кулялопа|«Эрзянь коммуна»]] ({{Lang-ru|«Эрзянская коммуна»}}), «Советская Мордовия» кулялопатнесэ, Мордовиянь пачтамо ды теленевтемань Прявткомитетсэ ({{Lang-ru|Госкомитет по радиовещанию и телевидению Мордовии}}). 
+Саезь 1942 иестэ - турем киксэ (фронтсо)<ref>[http://www.mokshen-pr.ru/?id_refer=4072 МОКШЭРЗЯНЬ ПИСАТЕЛЬХНЕ, КОНАТ АШЕСТЬ МРДА ВОЙНАСТА]{{Ref-mdf}}</ref>. Содавиксэв валморозеенть [[Артур Моро|Артур Моро]] марто ойнань шкасто нолдась 20-сь леднема бригадань НКВД «Вперед за Родину» кулялопаньть<ref name="МРОКМ им. И.Д. Воронина_В.И. Радин-Аловский"/>. Седе тов, пенсияв туема шканть видс ([[1962 ие]]) важодсь [[«Эрзянь коммуна» кулялопа|«Эрзянь коммуна»]] ({{Lang-ru|«Эрзянская коммуна»}}), «Советская Мордовия» кулялопатнесэ, Мордовиянь пачтамо ды теленевтемань Прявткомитетсэ ({{Lang-ru|Госкомитет по радиовещанию и телевидению Мордовии}}). 
 
 == Шкинемазо==
 Сермадома лувсонть ушодовсь [[1930 ие]]стэ. Васенце пурнавксось «Од пингень вий» ({{Lang-ru|«Сила нового времени»}}) лись [[1933 ие]]стэ. Эйсензэ совась валморот ды поэмат. Сёрмадовкстнэсэ маряви сёрмадыцянть гайтев вайгелезэ одкстомтнеде, конат састь веленть эрямонтень. Седе содавиксэкс В. Радаев теевсь кода прозаньсёрмадей. Васенце истямо пурнавксось «Омбоце эскелькс» лем ало ({{Lang-ru|«Второй шаг»}}), кона лись [[1947 ие]]стэ, сон ёрокчистэ, кемевикстэ невти важодиця ломантнень, вейсхозонь веленть эрямонть. Омбоце пурнавксось – «Велень ёвтнемат» ({{Lang-ru|«Деревенские рассказы»}}) неинзеть валдонть [[1958 ие]]стэ. 
@@ -48,7 +48,7 @@
 == Лецтнемга==
 * [[2011 ие]]стэ Мордовиянь краеведениянь музейсэ В.И. Радаевень 105 иеть юбилеентень алтавсь «С лейкой и блокнотом…» невтевксэсь<ref name="Колхозонь прявтсто">[http://www.erziapr.ru/index.php/library/298-2011-03-23-07-50-05 Колхозонь прявтсто - сермадеекс]{{Ref-myv}}</ref>, эйсэнзэ ульнесть невтезь сонзэ фотокувонзо, ули-паронзо, документэнзэ, казнензэ ды лия мезензэ.
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Эрзянь Ине ломанть|Р]]
