*Empty MediaWiki Message*

--- a/Алово_(Никольской_буе).mw
+++ b/Алово_(Никольской_буе).mw
@@ -78,7 +78,7 @@
 
 == Содавикс ломанть те велестэнть ==
 Алово велесэ чачсь:
-* [[Радаев (Радин-Аловский), Василий Иванович|Василий Радаев (Радин-Аловский)]]<ref name="Библиотека_Радаев (Радин-Аловский)">[http://www.lib.e-mordovia.ru/Library/?Char=%D0&id=0  Библиотека Мордовской литературы. Радаев (Радин-Аловский) Василий Иванович] {{ref-ru}}</ref>—  эрзянь сёрмадей, валморозей.
+* [[Радаевень, Василий Иванович|Василий Радаев (Радин-Аловский)]]<ref name="Библиотека_Радаев (Радин-Аловский)">[http://www.lib.e-mordovia.ru/Library/?Char=%D0&id=0  Библиотека Мордовской литературы. Радаев (Радин-Аловский) Василий Иванович] {{ref-ru}}</ref>—  эрзянь сёрмадей, валморозей.
 == Веленть эрямозо  ==
 
 == Лисьм. ==
