Replacing Flag_of_United_Arab_Republic.svg with [[File:Flag_of_the_United_Arab_Republic.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]:).

--- a/ЛопаПарцун:Масторкоцт%2FЕгипет_Мастор.mw
+++ b/ЛопаПарцун:Масторкоцт%2FЕгипет_Мастор.mw
@@ -2,13 +2,13 @@
 | alias = Египет Мастор
 | flag alias = Flag of Egypt.svg
 | flag alias-1972 = Flag of Egypt 1972.svg
-| flag alias-1958 = Flag of United Arab Republic.svg
+| flag alias-1958 = Flag of the United Arab Republic.svg
 | flag alias-1952 = Flag of Egypt 1952.svg
 | flag alias-1922 = Flag of Egypt 1922.svg
 | flag alias-1805 = Egypt flag 1882.svg
 | flag alias-османский = Flag of Egypt 19th century.svg
 | flag alias-1882 = Egypt flag 1882.svg
-| flag alias-ОАР = Flag of United Arab Republic.svg
+| flag alias-ОАР = Flag of the United Arab Republic.svg
 | flag alias-ВМС = Naval Ensign of Egypt.svg
 | flag alias-ВВС = Eafflag.svg
 
