--- a/Дуняшин,_Алексей_Васильевич.mw
+++ b/Дуняшин,_Алексей_Васильевич.mw
@@ -2,9 +2,9 @@
  |лем                  = Алексей Дуняшин
  |оригинальной лем      = 
  |чачома лем         = Алексей Васильевич Дуняшин 
- |артовкс              = 
+ |артовкс              = Дуняшин Алексей (Пици-палакст, 1930).jpg
  |артовксонть покшолмазо   = 
- |артовксонть эйсте = 
+ |артовксонть эйсте = Алексей Дуняшин, фотокувось саезь сонзэ «Пици-палакст» сёрмадовксонь пурнавксто
  |важодема ёрокчизе     = валморозей, сёрмадей, фельетонист ды куляньсёрмадей
  |чачома чись          = 08.02.1904
  |чачома тарка         = {{ЧачомаТарка|Покш Толкан веле (Похвистнева буень)|Покш Толкан веле}}, {{ЧачомаТарка|Похвистневань буе Самарань ёнксcо}}
