*Empty MediaWiki Message*

--- a/Дуняшин,_Алексей_Васильевич.mw
+++ b/Дуняшин,_Алексей_Васильевич.mw
@@ -1,5 +1,5 @@
 {{Ломанесь
- |лем                  = Алексей Дуняшин
+ |лем                  = Алек Дуняшин
  |оригинальной лем      = 
  |чачома лем         = Алексей Васильевич Дуняшин 
  |артовкс              = Дуняшин Алексей (Пици-палакст, 1930).jpg
@@ -23,7 +23,7 @@
  |википурнавкс         = 
 }}
 
-'''Дуняшин Алексей Васильевич''' ([[1904 ие]]нь [[даволковонь 8 чи]]стэ  [[Самарань ёнкс|Самарань ёнксонь]] [[Похвистневань буе Самарань ёнксcо|Похвистнева буе]]нь [[Покш Толкан веле (Похвистнева буень)|Покш Толкан велесэ]]<ref name="«Эрзянь Мастор257»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref> - [[1931 ие]]стэ) — [[Эрзя|эрзянь]]<ref name="liveinternet.ru">[http://www.liveinternet.ru/users/bremer/post229568158 8 ФЕВРАЛЯ РОДИЛСЯ...]{{Ref-ru}}</ref><ref name="Время и события. 2014">Время и события. 2014: библиографический указатель / Нац. б-ка им. А.С. Пушкина Респ. Мордовия; [сост. А.Н. Маланьчева]. – Саранск, 2013. – 148 с. {{Ref-ru}}</ref> сёрмадей<ref name="ЯГИНА А.">[http://journal.mrsu.ru/arts/zhanrovo-tematicheskijj-sostav-mordovskojj-pechati-perioda-ee-stanovleniya-po-stranicam-ehrzyanskojj-pressy-1920-kh-godov Ягина А. Н. Жанрово-тематический состав мордовской печати периода ее становления (по страницам эрзянской прессы 1920-х годов) // Огарев-online. – 2014. – №5.]{{Ref-ru}}</ref>, фельетонист, валморозей, публицист<ref name="Национальная библиотека">[http://www.library.saransk.ru/actions/?ELEMENT_ID=752 «Национальная библиотека им. А.С. Пушкина РМ» Информационный листок «Журналист, писатель»: к 110-летию со дня рождения А. В. Дуняшина]{{Ref-ru}}</ref>, ды куляньсёрмадей.
+'''Дуняшин Алексей Васильевич''', лиякс: '''Алек Дуняшин<ref name="«Пиципалакс»">Алек Дуняшин. Пици-палакст. Ёвтнемат ды фельетонт. СССР-нь народтнень Центрань издательствась, Москов, 1930, 12-це лоп. {{Ref-myv}}</ref>''' ([[1904 ие]]нь [[даволковонь 8 чи]]стэ  [[Самарань ёнкс|Самарань ёнксонь]] [[Похвистневань буе Самарань ёнксcо|Похвистнева буе]]нь [[Покш Толкан веле (Похвистнева буень)|Покш Толкан велесэ]]<ref name="«Эрзянь Мастор257»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref> - [[1931 ие]]стэ) — [[Эрзя|эрзянь]]<ref name="liveinternet.ru">[http://www.liveinternet.ru/users/bremer/post229568158 8 ФЕВРАЛЯ РОДИЛСЯ...]{{Ref-ru}}</ref><ref name="Время и события. 2014">Время и события. 2014: библиографический указатель / Нац. б-ка им. А.С. Пушкина Респ. Мордовия; [сост. А.Н. Маланьчева]. – Саранск, 2013. – 148 с. {{Ref-ru}}</ref> сёрмадей<ref name="ЯГИНА А.">[http://journal.mrsu.ru/arts/zhanrovo-tematicheskijj-sostav-mordovskojj-pechati-perioda-ee-stanovleniya-po-stranicam-ehrzyanskojj-pressy-1920-kh-godov Ягина А. Н. Жанрово-тематический состав мордовской печати периода ее становления (по страницам эрзянской прессы 1920-х годов) // Огарев-online. – 2014. – №5.]{{Ref-ru}}</ref>, фельетонист, валморозей, публицист<ref name="Национальная библиотека">[http://www.library.saransk.ru/actions/?ELEMENT_ID=752 «Национальная библиотека им. А.С. Пушкина РМ» Информационный листок «Журналист, писатель»: к 110-летию со дня рождения А. В. Дуняшина]{{Ref-ru}}</ref>, ды куляньсёрмадей.
 
 == Эстедензэ ==
 Семияст аволь покшоль, эрясть вадрясто. Тетязо, Василий Фролович, содыль сёрмас, бажась тонавтомс эйкакшонзояк. Алёша Дуняшин прядызе ушодкс школанть Шнамо Конев марто. Ульнесь веленькулянь сёрмадеекс, сёрмадовксонзо лиснесть Бугурусланонь, Самарань («Коммуна»), ды московонь «Беднота» кулялопатнесэ. 1926 иень [[сёксь|сёксня]] тусь тонавтнеме Московонь государствань журналистикань институтсо.  Теке иестэ лись васенце ёвтнемазо. Тонавтнеманзо прядызе 1928 иестэ.
