*Empty MediaWiki Message*

--- a/Кацядав_(Инесаро_буе).mw
+++ b/Кацядав_(Инесаро_буе).mw
@@ -68,7 +68,7 @@
 Кацядав велесэ чачсь:
 * [[Азыркин, Михаил Павлович|Михаил Азыркин]]<ref name="МРОКМ им. И.Д. Воронина_Полный кавалер ордена Славы">[http://www.mrkm.ru/news/?id=290  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Полный кавалер ордена Славы] {{ref-ru}}</ref> — Ине Ойнанть улиця, ({{Lang-ru| полный кавалер ордена Славы}}) 
 ==Веленть эрямозо==
-
+[[1941 ие]]стэ ульнесь теезь [[Мокшованя морамо кужо|«Мокшованя» морамо кужо]]сь<ref name="МРОКМ им. И.Д. Воронина_«Мокшаваня»">[http://www.mrkm.ru/news/?id=201  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». «Мокшаваня» («Мокшаночка»)]{{ref-ru}}</ref> ([[1999 ие]]стэ Мордовия Республикань Государственной премиянь лауреат). 
 == Лисьм.: ==
 <references />
 
