--- a/Эрзянь_фольклор.mw
+++ b/Эрзянь_фольклор.mw
@@ -47,7 +47,7 @@
 Экспедициянть ульнесь мелезэ пурнамс фольклорной ды келень материал финской ученоенть Хейкки Паасоненэнь киява, конась ульнесь неть таркатнесэ 110 иеде икеле. Ванномс, кодат полавкст теевсть келенть ды фольклоронть марто неть иетнень перть. Экспедициясь роботась Сярда- Белинской райононь Вышелейсэ, Мордовской Ишимсэ, Шемышейской райононь Ташто Яксаркасо, Од Яксаркасо, Захаркинасо. Сосновоборской райононь Тешнярь, [[Вязовка (смустьтне)|Вязовка]], Ега, Кардафлей велетнесэ. Теде башка ульнесть Мордовиянь Рузаевкань райононь Левжасо, Сузгарьсэ, Ковылкинань райононь Троицкойсэ, Инсаронь райононь Кочетовкасо, Чувашиянь Напольное велетнесэ. 
 
 Экспедициянь перть диктофонс сермадозь ведьгемень часос материал. Теезь ламо фотографият. 
-Материалось, кона сермадозель диктофонс тонавтнемадо мейле, невтьсы, кода 110 иес полавтовсть эрзянь морось, евксось, жанрань лия видтнэ. Евтазь велетнесэ пурназь материалось невти эрзянь моронть неень тевензэ. Истя Пензань областень Сосновоборской райононь Тешнярь велесэ удалась сермадомс ламо содавикс хорт, группат. Ульнесть сермадозь весе жанратне. Белинской райононь Карсаевка велесэ седе парсте ванстовсть устной народной творчествань произведениятне. Тесэ вастовсть истят ломанть, кинь ульнесь мелезэ лездамс ванстомс эрзянь моротнень. Теке жо шкастонть Сярда велесэ эрицятне а пек покш мельсэ лездасть экспедициянтень. Экспедициясь невтизе, эрзянь фольклорось жив. Кезэрень моротне эште эрить ды сынст морсить. Велень эрьва кодамо праздниктне моровтомо а ютнить. 
+Материалось, кона сермадозель диктофонс тонавтнемадо мейле, невтьсы, кода 110 иес полавтовсть эрзянь морось, евксось, жанрань лия видтнэ. Евтазь велетнесэ пурназь материалось невти эрзянь моронть неень тевензэ. Истя Пензань областень Сосновоборской райононь Тешнярь велесэ удалась сермадомс ламо содавикс хорт, группат. Ульнесть сермадозь весе жанратне. [[Белинань буе (Пенза ёнкс)|Белинской буень]] [[Карсаевка (Белинань буе)|Карсаевка велесэ]] седе парсте ванстовсть устной народной творчествань произведениятне. Тесэ вастовсть истят ломанть, кинь ульнесь мелезэ лездамс ванстомс эрзянь моротнень. Теке жо шкастонть Сярда велесэ эрицятне а пек покш мельсэ лездасть экспедициянтень. Экспедициясь невтизе, эрзянь фольклорось жив. Кезэрень моротне эште эрить ды сынст морсить. Велень эрьва кодамо праздниктне моровтомо а ютнить. 
 
 Афанасьева Ольга Семеновна чачсь 1918 иестэ [[Пенза ёнкс|Пензань областень]] Бессоновской буень [[Пазялго|Пазелки велесэ]]. Сонзэ мельсэ ламо эрзянь морот. Зярдо кортамось тусь неень шкадонть, сон серьгедсь моро «зярдо пурнавкшныть вейсэ». Аванть ламо моронзо сермадозь магнитофонс. Сонзэ эйкакшонзо, нуцьканзо покш мельсэ кунсолыть эйсэст ошсояк. 
 
