*Empty MediaWiki Message*

--- a/Алоош.mw
+++ b/Алоош.mw
@@ -74,11 +74,15 @@
  |add1                     = {{Ленинэнь орден|тип=ош}}
 }}
 {{Лия смустьтне|Ало (смустьтне)}}
-'''А́лоош''' (лиякс '''Нижней Новгород''', {{lang-ru|Нижний Новгород}}) — те Россия Масторонть ошось, [[Алоошонь ёнкс|Алоошонь ёнксонть]] прявтошось.
+'''А́лоош''' (лиякс: '''Нижнёй''', '''Нижней Новгород''', {{lang-ru|Нижний Новгород}}) — те Россия Масторонть ошось, [[Алоошонь ёнкс|Алоошонь ёнксонть]] прявтошось.
 
 Ошонть таркасо икеле аштесь покш эрзянь ош — Обран ошось.
 Кезэринь шказо: Эрзянь Обран ошось ульнесь Равонь-Окань юткосне, вере пандо прясо, косо нев Ало ошонь кремлясь. А Окань томбале, эрькесть ало ёнксо Олодимир-Суздальскоинь рузтнэ тейзть эйсест од ошне ды лемдизь Од Ало ошокс (Нижний Новгород). Ташто Обран ошость каршо, конась се шкава ульнесь паро вере таркасне чувтонь пирень куншкасо. Рузтнэ теизь Ало ошость, икелев ванозь, - бути седе вадрясто турьмекс эрзятнень марто. Колияк чумом а кенери, кода мерьсынь валтнэнь - седе тов, Обран ошость пултызь. Мееле, те ошонь юртозне кевень кремлясть путызь.   
 
+== Содавикс ломанть тестэнть ==
+* [[Куклин, Вячеслав Николаевич|Вячеслав Николаевич Куклин]]<ref name="МРОКМ им. И.Д. Воронина_В.Н. Куклин">[http://www.mrkm.ru/news/?id=196  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». 75 – лет историку-краеведу В.Н. Куклину.] {{ref-ru}}</ref>— историк-краевед, исторической наукань кандидат, Мордовской АССР-нь культурань заслуженной важодиця, РМ-нь Масторпрявтонь казнень лауреат
+== Лисьм.: ==
+<references />
 
 {{stub}}
 
