*Empty MediaWiki Message*

--- a/Покш_Эрьмезенка_(Чаунзабуе).mw
+++ b/Покш_Эрьмезенка_(Чаунзабуе).mw
@@ -67,7 +67,7 @@
 Лемесь-антропоним, саеви '''Эрменза''' кезерэнь эрзянь лемстэнть, «эрямс» валонть<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> эйстэ.
 == Содавикс ломанть те велестэнть ==
 Покш Эрьмезенка велесэ чачсть:
-* П. И. Акимов, А. П. Байкова — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}).
+* [[Акимов, Петр Иванович|Петр Иванович Акимов]]<ref name="МРОКМ им. И.Д. Воронина_Акимов">[http://www.mrkm.ru/news/?id=192  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Главная магистраль его жизни.] {{ref-ru}}</ref>, А. П. Байкова — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}).
 * Е. И. Храмов, Т. Е. Храмов — ульнесть вейсхозонь ды вейссоветэнь прявттне.
 == Сёрм.: ==
 <references />
