--- a/Салазгерьге_(Торбейбуе).mw
+++ b/Салазгерьге_(Торбейбуе).mw
@@ -58,11 +58,13 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Салазгерьге''' ({{Lang-ru|с. Салазгорь}}) — веле [[Торбейбуе]]сэ, [[Мордовия]]со.
+'''Салазгерьге''' ({{Lang-ru|с. Салазгорь}}) — мокшонь веле [[Торбейбуе]]сэ, [[Мордовия]]со.
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
-== Сёрм.: ==
+* Татьяна Ивановна Панкратова - Лушкина<ref name="МРОКМ им. И.Д. Воронина_Потомственная вышивальщица">[http://www.mrkm.ru/news/?id=193  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Потомственная вышивальщица] {{ref-ru}}</ref> —содавиксэв викшниця
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
 [[Category:Торбейбуень велеть]]
+[[Category:Мокшонь велеть]]
