--- a/Боляень_Акай.mw
+++ b/Боляень_Акай.mw
@@ -1,8 +1,21 @@
 '''Боляень Акай''' — [[эрзят|эрзянь]] мурза, кона эрясь ХVII-це пингестэ. 
 
-Сон васня служась [[рузт]]нэнень Атямарь крепостьсэ. 1670 иестэ тусь туреме велень раськень аурексчинь кис, теевсь крестьянонь стякшнома ушмонь прявтокс Разинэнь ушмонь порксамодо мейле Симбирск ошонь ало. Мартонзо ульнесельть рузонь казаконь атаман Никитинский ды эрзянь казаконь атаман Елушонь Бажат.
-Ветнесь мельганзо 15-20 тёжат ушмант ды туриця ломанть москувонь карательтнень каршо. Сонзэ апокшке мобильной отрядзо (20-30 ластейть) "казакокс" ливтязь каявкшнось ятнэнь лангс ды нейке оргодькшнэсть.  Ожоковонь 24 чистэ Боляень Акай пурнась 7 тёжат ломанть. Истямо вийть марто макссь карательтненень виевь турема Усть-Урень велень маласо. Сынст прявтось - Ю. Барятинский эсь вийтнень марто потась Симбирск ошонь малас. Омбоце турема Усть-Урень маласо ютась сундерьковонь 6 чистэ. Те стака туремасо Акаень ранизь пулясо, ансяк карательтнень таго шаштызь. Стязь модатне Барыш ды Сура лейтнень юткова эзть лепштяво тенест. Седе мейле Кандрать велень вакссо ютась прявт турема, 15 тёжат ломатнть ды 12 пушкат пиризь кинть царень ушмонтень. Ансяк те туремасо карательтне изнизь Акаень вийтнень, ды Боляень Акай потатсь Сура леень тона пелей. Тосо Орданьбуень ваксо кармасть кирдеме кородоманть. Ацамковсто 1670 иестэ ульнесь сехте виевь турема москув ушмонть марто. Сестэ Тургенево велень ваксо Акай пурнась 20 тёжат малав ломанть, мартост ульнесть 20 малав пушкат. Те стака туремасо карательтне поркснизь Акай Боляень ушмонть ды пултызь весе стиця ломатненень лездыця велеть. Костяшево, Акаень тиринь велезэяк пултызь. 
-Сонзэ кундызь ды седе мейле ускизь Краснослободск ошов куловтома таркав ды пурназь ломантнень сельмест икеле печксизь ды керьсизь прязо, кедензэ ды пильгензэ.
+Сон васня служась [[рузт]]нэнень Атямарь крепостьсэ. [[1670 ие]]стэ тусь туреме велень раськень аурексчинь кис, теевсь крестьянонь стякшнома ушмонь прявтокс Разинэнь ушмонь порксамодо мейле [[Ульянонь ош|Симбирск ошо]]нь ало. Мартонзо ульнесельть рузонь казаконь атаман Никитинский ды эрзянь казаконь атаман Елушонь Бажат.
+Ветнесь мельганзо 15-20 тёжат ушмант ды туриця ломанть москувонь карательтнень каршо. Сонзэ апокшке мобильной отрядзо (20-30 ластейть) «казакокс» ливтязь каявкшнось ятнэнь лангс ды нейке оргодькшнэсть.  [[Ожоковонь 24 чи]]стэ Боляень Акай пурнась 7 тёжат ломанть. Истямо вийть марто макссь карательтненень виевь турема Усть-Урень велень маласо. Сынст прявтось - Ю. Барятинский эсь вийтнень марто потась Симбирск ошонь малас. Омбоце турема Усть-Урень маласо ютась [[сундерьковонь 6 чи]]стэ. Те стака туремасо Акаень ранизь пулясо, ансяк карательтнень таго шаштызь. Стязь модатне Барыш ды [[Сура лей]]тнень юткова эзть лепштяво тенест. Седе мейле Кандрать велень вакссо ютась прявт турема, 15 тёжат ломатнть ды 12 пушкат пиризь кинть царень ушмонтень. Ансяк те туремасо карательтне изнизь Акаень вийтнень, ды Боляень Акай потатсь Сура леень тона пелей. Тосо [[Орданьбуе (смустьтне)|Орданьбуень]] ваксо кармасть кирдеме кородоманть. Ацамковсто 1670 иестэ ульнесь сехте виевь турема москув ушмонть марто. Сестэ Тургенево велень ваксо Акай пурнась 20 тёжат малав ломанть, мартост ульнесть 20 малав пушкат. Те стака туремасо карательтне поркснизь Акай Боляень ушмонть ды пултызь весе стиця ломатненень лездыця велеть. Костяшево, Акаень тиринь велезэяк пултызь. 
+
+Кода ледстяви<ref name="МРОКМ им. И.Д. Воронина_340-летие">[http://www.mrkm.ru/news/?id=185  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». 340-летие освобождения Саранского кремля и уезда от войск Степана Разина] {{ref-ru}}</ref>:
+{{Цитатань ушодома}} ({{Lang-myv| ''вейке ушмонь прявтось  – мурза Акай Боляев туи эсензэ Костяшево веленьте, кона [[Саран ош]]сто ашти 30 [[вайгельпе|вп]], тосо отрядозо ульнесь тапазь ды сонзэ порксызь, ульнесь те [[ацамковонь 16 чи]]стэнь [[ацамковонь 26 чи|26 чи]]нть видс ташто стильсэ ([[1670 ие]] [[ацамковонь 29 чи]]   - [[1671 ие]] [[якшамковонь 11 чи]] од стиленть) ''.}}
+{{oq|ru|.... один из предводителей восстания – мурза Акай Боляев отступает в свою деревню Костяшево в 30 верстах от Саранска, где его отряд был окончательно разбит, а сам он пленен, произошло это между 16 и 26 дек. ст. стиля (29 дек. 1670 г. - 11 янв. 1671 г. нов. стиля).}}
+{{Цитатань пе}}
+
+[[1671 ие]]нь [[якшамковонь 11 чи]]стэ Долгоруков чирязось максь Боляйнень кеместызеть куломанзо: 
+{{Цитатань ушодома}} ({{Lang-myv| ''«...Салыцянть ды ломанень кепедицянть Мурзань Акайканть мон меринь ... ламо саламонзо кис... куловтомонзо»''}}
+{{oq|ru|«...Вора и изменщика и бунтовщика Мурза Акайку велел я... за многое его воровство… казнить смертью»<ref name="МРОКМ им. И.Д. Воронина_340-летие"/>}}
+{{Цитатань пе}}
+
+Сонзэ кундызь ды седе мейле ускизь [[Якстерекуро ош (Мордовия)|Краснослободск ошов]]<ref name="МРОКМ им. И.Д. Воронина_Эрзянь Мастор_332">[http://www.erzia.saransk.ru/arhiv.php?n=3227&nom11=332  газета «Эрзянь Мастор», № 332. Национальные герои и выдаюзиеся деятели народа эрзя.]{{ref-ru}}</ref>  куловтома таркав ды пурназь ломантнень сельмест икеле печксизь ды керьсизь прязо, кедензэ ды пильгензэ.
+== Лисьм.: ==
+<references />
 
 [[Category:Эрзянь Ине ломанть|Б]]
 [[Category:Эрзянь ушман|Б]]
