*Empty MediaWiki Message*

--- a/Боляень_Акай.mw
+++ b/Боляень_Акай.mw
@@ -1,4 +1,4 @@
-'''Боляень Акай''' — [[эрзят|эрзянь]] мурза, кона эрясь ХVII-це пингестэ. 
+'''Боляень Акай''', лиякс: '''Мурзакайка''', '''мурза Кайко<ref name="Эрзянь Мастор_332"/>''' — [[эрзят|эрзянь]] мурза, кона эрясь ХVII-це пингестэ. 
 
 Сон васня служась [[рузт]]нэнень Атямарь крепостьсэ. [[1670 ие]]стэ тусь туреме велень раськень аурексчинь кис, теевсь крестьянонь стякшнома ушмонь прявтокс Разинэнь ушмонь порксамодо мейле [[Ульянонь ош|Симбирск ошо]]нь ало. Мартонзо ульнесельть рузонь казаконь атаман Никитинский ды эрзянь казаконь атаман Елушонь Бажат.
 Ветнесь мельганзо 15-20 тёжат ушмант ды туриця ломанть москувонь карательтнень каршо. Сонзэ апокшке мобильной отрядзо (20-30 ластейть) «казакокс» ливтязь каявкшнось ятнэнь лангс ды нейке оргодькшнэсть.  [[Ожоковонь 24 чи]]стэ Боляень Акай пурнась 7 тёжат ломанть. Истямо вийть марто макссь карательтненень виевь турема Усть-Урень велень маласо. Сынст прявтось - Ю. Барятинский эсь вийтнень марто потась Симбирск ошонь малас. Омбоце турема Усть-Урень маласо ютась [[сундерьковонь 6 чи]]стэ. Те стака туремасо Акаень ранизь пулясо, ансяк карательтнень таго шаштызь. Стязь модатне Барыш ды [[Сура лей]]тнень юткова эзть лепштяво тенест. Седе мейле Кандрать велень вакссо ютась прявт турема, 15 тёжат ломатнть ды 12 пушкат пиризь кинть царень ушмонтень. Ансяк те туремасо карательтне изнизь Акаень вийтнень, ды Боляень Акай потатсь Сура леень тона пелей. Тосо [[Орданьбуе (смустьтне)|Орданьбуень]] ваксо кармасть кирдеме кородоманть. Ацамковсто 1670 иестэ ульнесь сехте виевь турема москув ушмонть марто. Сестэ Тургенево велень ваксо Акай пурнась 20 тёжат малав ломанть, мартост ульнесть 20 малав пушкат. Те стака туремасо карательтне поркснизь Акай Боляень ушмонть ды пултызь весе стиця ломатненень лездыця велеть. Костяшево, Акаень тиринь велезэяк пултызь. 
@@ -13,7 +13,7 @@
 {{oq|ru|«...Вора и изменщика и бунтовщика Мурза Акайку велел я... за многое его воровство… казнить смертью»<ref name="МРОКМ им. И.Д. Воронина_340-летие"/>}}
 {{Цитатань пе}}
 
-Сонзэ кундызь ды седе мейле ускизь [[Якстерекуро ош (Мордовия)|Краснослободск ошов]]<ref name="МРОКМ им. И.Д. Воронина_Эрзянь Мастор_332">[http://www.erzia.saransk.ru/arhiv.php?n=3227&nom11=332  газета «Эрзянь Мастор», № 332. Национальные герои и выдаюзиеся деятели народа эрзя.]{{ref-ru}}</ref>  куловтома таркав ды пурназь ломантнень сельмест икеле печксизь ды керьсизь прязо, кедензэ ды пильгензэ.
+Сонзэ кундызь ды седе мейле ускизь [[Якстерекуро ош (Мордовия)|Краснослободск ошов]]<ref name="Эрзянь Мастор_332">[http://www.erzia.saransk.ru/arhiv.php?n=3227&nom11=332  газета «Эрзянь Мастор», № 332. Национальные герои и выдаюзиеся деятели народа эрзя.]{{ref-ru}}</ref>  куловтома таркав ды пурназь ломантнень сельмест икеле печксизь ды керьсизь прязо, кедензэ ды пильгензэ.
 == Лисьм.: ==
 <references />
 
