*Empty MediaWiki Message*

--- a/Отрадной_(Чаунзабуе).mw
+++ b/Отрадной_(Чаунзабуе).mw
@@ -69,8 +69,8 @@
 Лемесь-юрось саеви ташто рузонь ''хлысты'' (лияксктозь «христы») валонть<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> эйстэ.
 == Содавикс ломанть те велестэнть ==
 Отрадной велесэ чачсть:
-
-== Сёрм.: ==
+* [[Татьяничева, Людмила Константиновна|Людмила Константиновна Татьяничева]]<ref name="МРОКМ им. И.Д. Воронина_К 95-летию Л.К. Татьяничевой">[http://www.mrkm.ru/news/?id=178  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». «Я другой не искала судьбы». К 95-летию Л.К. Татьяничевой] {{ref-ru}}</ref>— рузонь валморозей
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
