--- a/Алу_Парынз_веле_(Покш_Килейбуе).mw
+++ b/Алу_Парынз_веле_(Покш_Килейбуе).mw
@@ -70,7 +70,9 @@
 == Содавикс ломанть те велестэнть ==
 *  Н.С. Макушкин — артыця
 * С. А. Адушкин — Мордовиянь раськень артист 
-== Сёрм.: ==
+== Веленть эрямозо  ==
+[[1961 ие]]стэ а васоло ульнесь муезь казна XIV – XV  пингень [[сия]]нь [[ярмакт]]<ref name="МРОКМ им. И.Д. Воронина_«Клады">[http://www.mrkm.ru/news/?id=162  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». «Клады земли мордовской»] {{ref-ru}}</ref>. Сонзэ лемдизь '''Саранонь Покш казна''' ({{Lang-ru|Большой Саранский клад}}), эйсэнзэ ульнесть муезь 2547 ярмакт, сон ульнесь модас кекшезь малав [[1409 ие]]стэ. 
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть|А]]
